[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
jito-protos = { workspace = true }
log = { workspace = true }
jito-searcher-client = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-memo = "6.0.0"
