[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
solana-sdk = { workspace = true }
prost-types = { workspace = true }
solana-perf = { workspace = true, features = ["dev-context-only-utils"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
